hphp/hack/test/typecheck/higher_kinded_types/variance_on_hk_param.php
<?hh // strict

class Test<+T2<T3>> {}
